force-app/main/default/objects/Work_Order_Activity__c/Work_Order_Activity__c.object-meta.xml
<CustomObject>
    <description>Read-only status/activity history entry on a Work Order, from the Yardi sync. Never edited in Salesforce.</description>
    <label>Work Order Activity</label>
    <nameField>
        <displayFormat>WOA-{0000}</displayFormat>
        <label>Activity Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Order Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>