force-app/main/default/objects/Work_Order_Activity__c/fields/Actor__c.field-meta.xml
<CustomField>
    <fullName>Actor__c</fullName>
    <description>Who/what produced the entry — "Yardi" or a person's name.</description>
    <label>Actor</label>
    <length>120</length>
    <type>Text</type>
</CustomField>