force-app/main/default/objects/Work_Order_Activity__c/fields/Entry_Date__c.field-meta.xml
<CustomField>
    <fullName>Entry_Date__c</fullName>
    <label>Entry Date</label>
    <type>DateTime</type>
</CustomField>