force-app/main/default/objects/Work_Order_Activity__c/fields/Entry_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Entry_DateTime__c</fullName>
    <description>When this activity/status entry occurred in Yardi. Mirrored read-only from the Yardi sync; orders the append-only Work Order Activity timeline, where same-transaction rows share a timestamp and tie-break on Name. Replaces Entry_Date__c, whose _Date suffix asserted a date-only type it never had - this field stores date AND time, per ARCHITECTURE.md §1 rule 9.</description>
    <inlineHelpText>Date AND time the activity occurred in Yardi. Mirrored read-only from the sync - do not edit it in Salesforce; the timeline is ordered newest-first by this value.</inlineHelpText>
    <label>Entry DateTime</label>
    <type>DateTime</type>
</CustomField>