force-app/main/default/objects/Work_Order_Activity__c/fields/Kind__c.field-meta.xml
<CustomField>
    <fullName>Kind__c</fullName>
    <label>Kind</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Sync</fullName><default>true</default><label>Sync</label></value>
            <value><fullName>Status</fullName><default>false</default><label>Status</label></value>
            <value><fullName>Vendor</fullName><default>false</default><label>Vendor</label></value>
            <value><fullName>Note</fullName><default>false</default><label>Note</label></value>
            <value><fullName>Flag</fullName><default>false</default><label>Flag</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>